--- a/_posts/mysql/2022-09-27-아키텍처.md
+++ b/_posts/mysql/2022-09-27-아키텍처.md
@@ -9,17 +9,17 @@ tags: [MySQL]
 ### 아키텍처 (전체 구조)
 
 - MySQL 엔진 (다음으로 구성되어 있다):
-  - 커텍션 핸들러
-  - SQL 파서 : 사용자 요청으로 들어온 쿼리 문장을 토큰으로 분리해 **파서 트리**를 만들어 재는 작업 
+  - 커넥션 핸들러
+  - SQL 파서 : 사용자 요청으로 들어온 쿼리 문장을 토큰으로 분리해 **파서 트리**를 만들어 내는 작업
   - 전처리기 : 파서 트리에서 만들어진 각 토큰이 문제가 없는지 확인 하는 작업 (객체 존재 여부, 접근 권한 여부)
-  - SQL 옵티마이저 : 통계 기반으로 쿼리 실행을 최적의 비용을 찾는 역할 
+  - SQL 옵티마이저 : 통계 정보 기반으로 최적의 쿼리 실행 비용을 찾는 역할
   - 실행 엔진 : 옵티마이저가 선택한 실행 계획에 따라 핸들러에게 실행 요청을 하는 역할
 - 스토리지 엔진
   - MYISAM, InnoDB, Memory 등 있음
-  - 버퍼 풀 : 디스크의 데이터 파일, 인덱스 정보를 메모리에 캐쉬해 두는 공간 
+  - 버퍼 풀 : 디스크의 데이터 파일, 인덱스 정보를 메모리에 캐쉬해 두는 공간
   - 로그 버퍼
   - 실제 데이터를 디스크에 쓰고 읽어서 메모리에 로드하는 역할을 함
-- 디스크 
+- 디스크
   - 데이터 파일, 로그 파일
 
 ### 쓰레딩 구조
@@ -41,9 +41,9 @@ tags: [MySQL]
 ### 메모리 구조
 - 글로벌 메모리 영역과 로컬 메모리 영역으로 나눠짐
 - 글로벌 메모리 영역
-  - 테이블 캐시 
+  - 테이블 캐시
   - 버퍼풀
-  - 어댑티브 해시 인덱스 
+  - 어댑티브 해시 인덱스
   - 리두 로그 버퍼 (복구용 버퍼 : 사용자가 했던 작업에 대해서 로깅)
 - 로컬 메모리 영역
   - 쓰레드별로 독립적으로 할당
@@ -62,17 +62,17 @@ tags: [MySQL]
   - 가정 2 : connection 1 `update member set name = 'mouseeye' where id = 1;` 쿼리 실행
   - 가정 3 : connection 2 `select * from member where id = 1;`
   - 가정 4 : connection 1 은 아직 commit 하지 않음
-  - connection 2는 이전 버전을 보관하고 있는 Undo log로 접근하여 commit되지 않은 값인 `mvcc`를 읽을 수 있음 
-  - READ_COMMITTED나 그 이상의 격리 수준(REPEATABLE_READ, SERIALIZABLE)인 경우  
+  - connection 2는 이전 버전을 보관하고 있는 Undo log로 접근하여 commit되지 않은 값인 `mvcc`를 읽을 수 있음
+    - READ_COMMITTED나 그 이상의 격리 수준(REPEATABLE_READ, SERIALIZABLE)인 경우
 - 자동 데드락 감지
   - 데드락 감지 스레드 (background thread)가 주기적으로 잠금 대기 그래프를 검사해 교착 상태에 빠진 트랜잭션들을 찾아서 그 중 하나를 강제로 종료한다.
   - 교착 상태에 빠질 수 있음을 인정하고 교착 상태에 빠진 프로세스는 강제로 종료한다.
 - *서버가 재시작 될때* 완료되지 않은 트랜잭션이나 Partial write의 복구 작업을 한다.
 - InnoDB 버퍼 풀
-  - 디크의 데이터 파일이나 인덱스 정보를 메모리에 캐시해 두는 공간
+  - 디스크의 데이터 파일이나 인덱스 정보를 메모리에 캐시해 두는 공간
   - 페이지 단위로 관리 (`innodb_page_size` 시스템변수로 관리 가능)
   - 관리 자료구조
-    - LRU(Least Recently Used) : 자주 사용되지 않은 페이지가 보관되는 리스트 
+    - LRU(Least Recently Used) : 자주 사용되지 않은 페이지가 보관되는 리스트
     - MRU(Most Recently Used) : 자주 사용되는 페이지가 보관되는 리스트
     - Free 리스트 : 사용되지 않은 영역
     - Flush 리스트 : 더티 페이지(디스크로 동기화 되지 않은)의 변경 시점 기준의 페이지 목록을 관리한다.
@@ -81,8 +81,8 @@ tags: [MySQL]
     - 동작 방법
       1. `어댑티브 해시 인덱스`를 통해서 조회하고자 하는 데이터를 가진 페이지가 존재하는지 검사
       2. 1에서 조회하지 못하면, 디스크에서 해당 데이터를 가진 페이지를 `LRU 리스트`로 로드
-      3. 2번에서 로드된 페이지가 실제로 조회되면 `MRU 리스트`로 이동
-      4. 오랫동안 조회되지 않은 Aging된 페이지는 `LRM 리스트` 방향으로 점진적으로 이동하며, 결국 리스트에서 제거된
+      3. 2번에서 로드된 페이지가 실제로 사용되면 `MRU 리스트`로 이동
+      4. 오랫동안 조회되지 않은 Aging된 페이지는 `LRM 리스트` 방향으로 점진적으로 이동하며, 결국 리스트에서 제거된다
 - 언두 로그
   - 트랜잭션과 격리 수준 보장을 위해 DML 쿼리로 변경되기 이전의 데이터를 백업
     - 트랜잭션 보장 : 롤백 되면 이전 데이터로 복구
@@ -101,11 +101,11 @@ tags: [MySQL]
   - 서버가 비정상적으로 종료됐을때 데이터 파일에 기록되지 못한 데이터의 복구를 위한 안전장치
   - 레코드 전체를 보관하지 않고, 변경분만 보관한다.
   - 리두 로그의 디스크 동기화 주기 설정값 (리두 로그를 트랜잭션이 커밋 될때마다, 즉시 디스크로 기록하기를 권장)
-    - innodb_flush_log_at_trx_commit = 
+    - innodb_flush_log_at_trx_commit =
       - 0 - 1초에 한번씩 기록 및 동기화 (1초 동안의 데이터는 복구 불가능 할 수 있음)
       - 1 - 커밋마다 바로 기록 및 동기화
       - 2 - 커밋 후 바로 기록 및 1초마다 동기화
-  - 대용량 데이터를 한번에 적재 하는 경구 리두 로그를 비활성화해서 적재 시간을 단축 할 수 있다.
+  - 대용량 데이터를 한번에 적재 하는 경우 리두 로그를 비활성화해서 적재 시간을 단축 할 수 있다.
     - ```sql
       ALTER INSTANCE DISABLE INNODB REDO_LOG;
       ```
