--- a/_posts/daily_english/travel/2022-11-23-계산 하기.md
+++ b/_posts/daily_english/travel/2022-11-23-계산 하기.md
@@ -8,14 +8,14 @@ tags: [English Conversation]
 ### 식당에서 계산 할때....
 
 ```deployhq
-> Excuse me, but | 저기요, 근데..
-  > This is not what we ordered | 이건 저희가 주문한게 아니예요
-  > When will our food be ready? | 언제 우리 음식이 준비되죠?
-  > We never got our drinks | 우린 아직 음료를 받지 못했어요.
-  > this soup is too cold | 이 스프 너무 차가워요.. 식었어요.
-  > this pasta is overcooked | 이 파스타 너무 불었어요.
-  > this pasta is too salty | 이 파스타 너무 짜요..
-  > this part looks burnt. | 이 부분이 탄것처럼 보여요.
+ Excuse me, but | 저기요, 근데..
+   This is not what we ordered | 이건 저희가 주문한게 아니예요
+   When will our food be ready? | 언제 우리 음식이 준비되죠?
+   We never got our drinks | 우린 아직 음료를 받지 못했어요.
+   this soup is too cold | 이 스프 너무 차가워요.. 식었어요.
+   this pasta is overcooked | 이 파스타 너무 불었어요.
+   this pasta is too salty | 이 파스타 너무 짜요..
+   this part looks burnt. | 이 부분이 탄것처럼 보여요.
 ```
 
 ### + 음식 주문
