docker 이미지 관리 명령어 추가 진행중

--- a/_posts/dev_env/2023.01.18-promQL 기초.md
+++ b/_posts/dev_env/2023.01.18-promQL 기초.md
@@ -6,6 +6,15 @@ categories: [prometheus]
 tags: [prometheus]
 ---
 
+### Functions
+- rate()
+  - range vector에 속한 시계열 데이터의 초당 평균 변화율 계산
+  - 느리게 변화하는 카운터를 표현할 때 좋음
+
+- irate()
+  - range vector에 속한 시계열 데이터의 초당 평균 변화율 계산
+  - 단, 마지막 두개의 데이터를 기반으로 계산한다.
+  - 변덕스럽고 빠르게 변화하는 카운터를 표현할 때 좋음 (그래프 중간 중간 스파이크가 보이면 읽기 어렵기 때문..)
 
 
 ### 참고자료
