--- a/_posts/k8s/2022-10-09-Docker 기본 개념 및 명령어.md
+++ b/_posts/k8s/2022-10-09-Docker 기본 개념 및 명령어.md
@@ -48,5 +48,18 @@ tags: [기본 개념]
     - -link 실행할 컨테이너에서 접속할 다른 컨테이너 별칭 설정 : 위 예시 기준으로 mysql_test_db라는 컨테이너를 mysql이라는 별칭으로 내부에서 접근
     - -e 환경변수 세팅
   - docker 브리지 네트워크를 통해서 대체됨!!!!
--
+- 호스트 볼륨 공유
+  - docker run -d --name host_volume_share -v [호스트의 볼륨 위치]:[컨테이너의 볼륨 위치] mysql:latest
+  - `docker run -d -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=wordpress -v /home/wordpress_db:/var/lib/mysql mysql:latest`
+  - 도커 이미지로 띄운 컨테이너가 종료되면 컨테이너에 생성된 데이터도 사라진다. 휘발성이 아닌 영구적으로 보관하기 위해 볼륨을 사용한다.
+- 도커 볼륨 생성
+  - `docker volume create` --name myvolume
+  - `docker run -d --name mysql_with_volume -v myvolume:/root mysql:latest`
+
+### Docker 이미지 관리 명령어
+- 도커 이미지 검색
+  - docker search [저장소 이름]/[이미지 이름]
+  - docker search docker.io/ubuntu
+- 도커 이미지 생성
+  -
 
