--- a/_posts/k8s/2022-10-09-Docker 기본 개념 및 명령어.md
+++ b/_posts/k8s/2022-10-09-Docker 기본 개념 및 명령어.md
@@ -61,5 +61,75 @@ tags: [기본 개념]
   - docker search [저장소 이름]/[이미지 이름]
   - docker search docker.io/ubuntu
 - 도커 이미지 생성
-  -
+  - 애플리케이션 구동을 위한 환경을 세팅한 이미지를 직접 만들 수 있음
+    1. 컨테이너 기동 : docker run -i -t --name commit_test ubuntu
+    2. 컨테이너 내 작업 진행 : echo test_first >> first
+    3. 컨테이너에서 빠져나와 commit 진행 : docker commit [OPTIONS] [컨테이너 이름] [생성할 이미지 이름]
+       - `docker commit commit_test docker.io/mouseeye/ubuntu:latest`
+    4. 도커 이미지 푸쉬
+       - `docker push docker.io/mouseeye/ubuntu`
+  - docker commit으로 새로운 버전의 이미지를 만들때 마다, layer가 추가 된다.
+  - 추가된 layer는 `docker inspect mouseeye/ubuntu` 또는 `docker history mouseeye/ubuntu` 로 확인 할 수 있음.
+```shell
+"Layers": [
+"sha256:874b048c963ab55b06939c39d59303fb975d323822a4ea48a02ac8dc635ea371",
+"sha256:ddcc7acea4bf300a0738edcbb1ee9e580a212f346682da505e587f22b9196519"
+]
+```
+- 도커 이미지 삭제
+  - docker rmi [이미지 이름]
+  - `docker rmi commit_test`
+  - `docker image prune` : 사용되지 않는 이미지 모두 삭제
+
+### Dockerfile
+- 컨테이너 이미지를 만들기 위한 일련의 과정들을 기록 해둔 스크립트 파일
+  - 생성할 이미지의 베이스 이미지(OS 환경) / 설치 페키지 / 소스코드 / 실행이 필요한 명령어 또는 셀 스크립트 등
+- Dockerfile이 위치한 경로에서 `docker build -t [이미지 이름] [빌드 컨텍스트]` 으로 이미지 생성
+  - `docker build -t test_image:0.1 ./`
+    - ./ 하위 디렉터리의 빌드 컨텍스트(빌드에 필요한 파일, 소스코드)를 가지고 test_image:0.1 이라는 이름으로 이미지 생성
+    - 빌드 컨텍스트는 꼭 필요한 파일만 담도록 지정하며, 불필요한 많은 파일이 포함될 경우 빌드를 수행하는 서버의 메모리를 낭비하게 된다.
+    - `.dockerignore` 라는 파일을 사용하면, 빌드 컨텍스트에서 제거할 파일들을 지정 할 수 있음
+  - Dockerfile로 생성된 이미지 실행 시 `docker run -d -P --name 컨테이너 이름 [이미지 이름]` 실행하되,
+  - -P 옵션을 주여 Dockerfile에서 사용된 포트가 노출하도록 한다.
+- 멀티 스테이지 빌드
+  - 컨테이너 내부에서 빌드를 수행하고 해당 환경을 이미지로 만드는 경우, 이미지에 불필요한 파일들이 포함된다.
+  - 이때 빌드용 스테이지 + 실제 실행에 사용할 스테이지 2개로 분리해서 이미지를 만들면 이미지 크기를 줄일 수 있다.
+- 명령어
+  - FROM : 생성할 이미지의 베이스 이미지
+  - LABEL : 이미지에 메타데이터 추가 / 추후 `docker ps 또는 docker images --filter "label=team=XXteam"` 와 같이 운영할때 편리하다.
+  - RUN : 이미지를 만들기 위해 컨테이너 내부에서 수행될 명령어
+    - 입력한 명령어가 prompt가 발생할 경우 오류 처리됨
+      - ex) apt-get install apache2 설치 y/n
+  - ADD : 파일 또는 URL을 이미지에 추가
+    - ADD [Dockerfile이 위치한 경로 또는 URL] [container에 위치시킬 경로]
+  - WORKDIR : 명령어를 실행할 컨테이너상의 경로 / bash 셸에서 `cd`를 사용한것과 같은 효과
+  - EXPOSE : Dockerfiel에 의해 생성될 이미지로 생성된 컨테이너에서 노출할 포트를 설정
+  - CMD : 컨테이너가 실행될 때마다 실행할 명령어 설정
+  - ENV : 컨테이너 내에서 사용할  환경 변수 설정 ex) ENV SERVICE_NAME member / echo $SERVICE_NAME
+  - VOLUME : 호스트와 공유할 컨테이너 내부의 디렉터리
+
+- SAMPLE Dockerfile (멀티 스테이지)
+```dockerfile
+# Build Stage
+FROM node12 as builder
+WORKDIR /workspace/app
+ADD . .
+RUN npm install && npm run build
+
+# Image Creation Stage for Deploy
+FROM nginx
+
+ADD nginx/config /etc/confd
+ADD nginx/scripts/* /work_dir/scripts
+RUN chmod u+x /work_dir/scripts/confd-wrapper
+
+ADD --from=builder /workspace/app/build /work_dir/nginx/html
+
+EXPOSE 80 443
+
+ENTRYPOINT ["/work_dir/scripts/confd-wrapper"]
+CMD ["nginx", "-g", "daemon off;"]
+```
+
+
 
