--- a/_posts/docker/2022-10-09-Docker 기본 개념 및 명령어.md
+++ b/_posts/docker/2022-10-09-Docker 기본 개념 및 명령어.md
@@ -109,11 +109,12 @@ tags: [기본 개념]
   - VOLUME : 호스트와 공유할 컨테이너 내부의 디렉터리
 
 - SAMPLE Dockerfile (멀티 스테이지)
+
 ```dockerfile
 # Build Stage
 FROM node12 as builder
 WORKDIR /workspace/app
-ADD . .
+ADD ../k8s .
 RUN npm install && npm run build
 
 # Image Creation Stage for Deploy
